# Standalone-production-inspection-app

./: .editorconfig  .env.example  .gitattributes  .gitignore  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: quality.yml
backend/: __init__.py
backend/api/: __init__.py  commands.py  contracts.py  events.py  model_jobs.py  reconstruction_jobs.py  routes.py
backend/app/: __init__.py  main.py  runtime.py
backend/core/: __init__.py  configuration.py  paths.py  serialization.py
backend/database/: __init__.py  backup.py  engine.py  migration.py  models.py  records.py  repositories.py
backend/domain/: __init__.py  acquisition.py  automatic_acquisition.py  center_completion.py  contracts.py  model_bundle.py  reconstruction.py  value_objects.py
backend/inference/: __init__.py  onnx_worker.py  projection.py  sahi.py
backend/reconstruction/: __init__.py  calibration.py  center_completion.py  dense_evidence.py  image_evidence.py  placement.py  pose_graph.py  preview.py  preview_center.py  projective.py  registration.py  rendering.py
backend/services/: __init__.py  acquisition_intake.py  center_reference_library.py  model_import.py  model_library.py  model_lifecycle.py  model_validation.py  offline_reconstruction.py  pipeline_lifecycle.py  run_orchestration.py
docs/: README.md
docs/architecture/: CORE_CONTRACTS_AND_CONFIGURATION.md  (+16 more)
electron/: eslint.config.mjs  package.json  tsconfig.json
frontend/: eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
tests/: __init__.py
(+87 files in other folders)
